# DIY-Music-Box

./: Cargo.toml  Embed.toml  README.md
src/: app.rs  buttons.rs  main.rs  player.rs  tagreader.rs
