[package]
authors = ["knoby <maximilian.brinkmann@posteo.de>"]
edition = "2018"
name = "rustiebox"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.13"
cortex-m-rtic = "0.5.5"
embedded-hal = "*"
panic-halt = "0.2.0"

[dependencies.stm32f1xx-hal]
features = ["rt", "stm32f103", "medium"]
version = "0.7.0"

[profile.dev]

[profile.release]
codegen-units = 1
debug = true
lto = true
