[package]
authors = ["knoby <maximilian.brinkmann@posteo.de>"]
edition = "2018"
name = "diy-music-box"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.13"
cortex-m-rtic = "0.5.5"
embedded-hal = "0.2.4"

[dependencies.panic-halt]
optional = true
version = "0.2.0"

[dependencies.heapless]
features = ["ufmt-impl"]
version = "0.5.6"

[dependencies.stm32f1xx-hal]
features = ["rt", "stm32f103", "medium"]
version = "0.7.0"

[dependencies.rtt-target]
features = ["cortex-m"]
version = "0.2.2"

[dependencies.panic-rtt-target]
features = ["cortex-m"]
optional = true
version = "0.1.1"

[features]
default = ["panic-rtt"]
panic-rtt = ["panic-rtt-target"]
panic-stop = ["panic-halt"]

[profile.dev]

[profile.release]
codegen-units = 1
debug = true
lto = true
